tests/ui/parser/issues/issue-59418.stderr
error: suffixes on a tuple index are invalid
  --> $DIR/issue-59418.rs:5:15
   |
LL |     let b = a.1suffix;
   |               ^^^^^^^ invalid suffix `suffix`

error: suffixes on a tuple index are invalid
  --> $DIR/issue-59418.rs:9:15
   |
LL |     let d = c.1suffix;
   |               ^^^^^^^ invalid suffix `suffix`

error: suffixes on a tuple index are invalid
  --> $DIR/issue-59418.rs:12:17
   |
LL |     let s = X { 0suffix: 0, 1: 1, 2: 2 };
   |                 ^^^^^^^ invalid suffix `suffix`

error: suffixes on a tuple index are invalid
  --> $DIR/issue-59418.rs:15:13
   |
LL |         X { 0suffix: _, .. } => {}
   |             ^^^^^^^ invalid suffix `suffix`

error: aborting due to 4 previous errors

